--- a/app/src/main/res/drawable/camera.xml
+++ b/app/src/main/res/drawable/camera.xml
@@ -1,7 +1,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item>
-    <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    <vector
         android:width="150dp"
         android:height="142dp"
         android:viewportWidth="150"
