--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,12 +9,13 @@
         android:id="@+id/nav_home"
         android:name="com.example.sfc_front.ui.home.HomeFragment"
         android:label="@string/menu_home"
+
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.sfc_front.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_read_file"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
