--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -4,6 +4,14 @@
         <item name="android:textSize">40sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
+    <style name="user_name">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="read_file">
+        <item name="android:textSize">29sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
     <style name="login_title">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#FFFFFF</item>
