六個按鈕，沒有功能

--- a/app/src/main/res/layout/switch_item.xml
+++ b/app/src/main/res/layout/switch_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/switchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:background="#666666"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:checked="false"
