--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,9 @@
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:background="#FF36363A"
+        app:itemTextColor="#FFFFFFFF"
+        app:itemIconTint="#FFFFFFFF"
+        app:itemBackground="@drawable/nav_bar_color"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
