--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
-    android:background="#262629">
+    android:background="#262629"
+    android:scrollbars="vertical"
+    tools:context=".ui.home.HomeFragment">
 
     <TextView
         android:id="@+id/ball_text"
@@ -26,7 +27,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="181dp"
         android:layout_height="181dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
         android:indeterminate="false"
         android:progressDrawable="@drawable/ball"
@@ -39,12 +40,12 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="142dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-6dp">
+        tools:ignore="MissingConstraints">
 
         <ImageButton
             android:id="@+id/camera_button"
@@ -60,7 +61,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-
             android:background="@drawable/video_selector"
             app:layout_constraintStart_toEndOf="@+id/camera_button"
             app:layout_constraintTop_toBottomOf="@+id/progressBar" />
@@ -68,21 +68,49 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="142dp"
         android:layout_marginTop="3dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-5dp">
+        tools:ignore="MissingConstraints">
+
+        <ImageButton
+            android:id="@+id/file_upgrade_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/file_upgrade_selector"
+            tools:ignore="MissingConstraints" />
+
+        <ImageButton
+            android:id="@+id/read_file_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:background="@drawable/read_file_selector" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="142dp"
+        android:layout_marginTop="3dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        tools:ignore="MissingConstraints">
 
         <ImageButton
             android:id="@+id/note_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/note_selector"
-            app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
         <ImageButton
