--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -6,207 +6,203 @@
     android:layout_height="match_parent"
     android:background="#3F3F3F">
 
-    <TextView
-        android:id="@+id/sign_up"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:gravity="center_horizontal"
-        android:text="@string/sign_up_title"
-        android:textAppearance="@style/sign_up_title"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/name_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:text="@string/name_"
-        android:textAppearance="@style/name_"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/name_"
-        android:layout_width="210dp"
-        android:layout_height="35dp"
-        android:hint="Your Name"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/input_background"
-        android:gravity="center_horizontal"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_text"
-        tools:ignore="MissingConstraints"
-        android:autofillHints=""
-        android:inputType="text" />
-    <TextView
-        android:id="@+id/gender_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:text="@string/gender"
-        android:textAppearance="@style/name_"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_"
-        tools:ignore="MissingConstraints" />
-    <EditText
-        android:id="@+id/gender"
-        android:layout_width="210dp"
-        android:layout_height="35dp"
-        android:hint="Your Gander"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/input_background"
-        android:gravity="center_horizontal"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gender_text"
-        tools:ignore="MissingConstraints"
-        android:inputType="text" />
-    <TextView
-        android:id="@+id/email_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:text="@string/Email"
-        android:textAppearance="@style/name_"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gender"
-        tools:ignore="MissingConstraints" />
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="210dp"
-        android:layout_height="35dp"
-        android:hint="Your E-mail"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/input_background"
-        android:gravity="center_horizontal"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_text"
-        tools:ignore="MissingConstraints,TextFields"
-        android:inputType="textEmailAddress" />
-    <TextView
-        android:id="@+id/password_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:text="@string/Password"
-        android:textAppearance="@style/name_"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email"
-        tools:ignore="MissingConstraints" />
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="210dp"
-        android:layout_height="35dp"
-        android:hint="Your Password"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/input_background"
-        android:gravity="center_horizontal"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_text"
-        tools:ignore="MissingConstraints,TextFields"
-        android:inputType="textPassword" />
-    <TextView
-        android:id="@+id/retype_password_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:text="@string/retypePassword"
-        android:textAppearance="@style/name_"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        tools:ignore="MissingConstraints" />
-    <EditText
-        android:id="@+id/retype_password"
-        android:layout_width="210dp"
-        android:layout_height="35dp"
-        android:hint="Password again"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/input_background"
-        android:gravity="center_horizontal"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/retype_password_text"
-        tools:ignore="MissingConstraints,TextFields"
-        android:inputType="textPassword" />
-    <TextView
-        android:id="@+id/phone_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:text="@string/phone"
-        android:textAppearance="@style/name_"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/retype_password"
-        tools:ignore="MissingConstraints" />
-    <EditText
-        android:id="@+id/phone"
-        android:layout_width="210dp"
-        android:layout_height="35dp"
-        android:hint="Your Number"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/input_background"
-        android:gravity="center_horizontal"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_text"
-        tools:ignore="MissingConstraints,TextFields"
-        android:inputType="phone" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="203dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="24dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
-        android:text="@string/send"
-        app:iconTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone"
-        app:rippleColor="#9A77D5"
- />
+        <TextView
+            android:id="@+id/sign_up"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:text="@string/sign_up_title"
+            android:textAppearance="@style/sign_up_title"
+            android:textStyle="bold"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/name_text"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="2dp"
+            android:gravity="fill_horizontal"
+            android:text="@string/name_"
+            android:textAppearance="@style/name_"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/name_"
+            android:layout_width="210dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:autofillHints=""
+            android:background="@drawable/input_background"
+            android:gravity="center_horizontal"
+            android:hint="Your Name"
+            android:inputType="text"
+            android:textColor="#FFFFFF"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/gender_text"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="2dp"
+            android:text="@string/gender"
+            android:textAppearance="@style/name_"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/gender"
+            android:layout_width="210dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/input_background"
+            android:gravity="center_horizontal"
+            android:hint="Your Gander"
+            android:inputType="text"
+            android:textColor="#FFFFFF"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/email_text"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="2dp"
+            android:text="@string/Email"
+            android:textAppearance="@style/name_"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="210dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/input_background"
+            android:gravity="center_horizontal"
+            android:hint="Your E-mail"
+            android:inputType="textEmailAddress"
+            android:textColor="#FFFFFF"
+            tools:ignore="MissingConstraints,TextFields" />
+
+        <TextView
+            android:id="@+id/password_text"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="2dp"
+            android:text="@string/Password"
+            android:textAppearance="@style/name_"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="210dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/input_background"
+            android:gravity="center_horizontal"
+            android:hint="Your Password"
+            android:inputType="textPassword"
+            android:textColor="#FFFFFF"
+            tools:ignore="MissingConstraints,TextFields" />
+
+        <TextView
+            android:id="@+id/retype_password_text"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="2dp"
+            android:text="@string/retypePassword"
+            android:textAppearance="@style/name_"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/retype_password"
+            android:layout_width="210dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/input_background"
+            android:gravity="center_horizontal"
+            android:hint="Password again"
+            android:inputType="textPassword"
+            android:textColor="#FFFFFF"
+            tools:ignore="MissingConstraints,TextFields" />
+
+        <TextView
+            android:id="@+id/phone_text"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="2dp"
+            android:text="@string/phone"
+            android:textAppearance="@style/name_"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/phone"
+            android:layout_width="210dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/input_background"
+            android:gravity="center_horizontal"
+            android:hint="Your Number"
+            android:inputType="phone"
+            android:textColor="#FFFFFF"
+            tools:ignore="MissingConstraints,TextFields" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="203dp"
+            android:layout_marginTop="24dp"
+
+            android:text="@string/send"
+            app:iconTint="#FFFFFF"
+            app:rippleColor="#9A77D5" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
